c/src/test/resources/c/mini_bnc/valid/free.ctrl
<controlFile>
  <sourceFile name="free.c" id="1" />
  <run>
    <startPosition fileId="1" line="3" />
    <endPosition fileId="1" line="13" />
  </run>
</controlFile>