c/src/test/resources/c/mini_bnc/invalid/absext2.ctrl
<controlFile>
  <sourceFile name="absext2.c" id="1" />
  <run>
    <startPosition fileId="1" line="8" />
    <endPosition fileId="1" line="13" />
  </run>
</controlFile>